fixed the visibility of the contact form when 900px

--- a/src/components/cssFiles/contact.css
+++ b/src/components/cssFiles/contact.css
@@ -90,3 +90,9 @@
     font-size: 1.7em;
   }
 }
+
+@media screen and (max-width: 900px) {
+  .formContainer {
+    visibility: visible;
+  }
+}
